--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,12 @@
         android:layout_centerInParent="true"
         android:text="Start Quiz" />
 
+    <Spinner
+        android:id="@+id/spinner_difficulty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_alignLeft="@+id/button_start_quiz"
+        android:layout_below="@+id/button_start_quiz"/>
+
 </RelativeLayout>
