--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,13 @@
         android:layout_alignLeft="@+id/spinner_subject"
         android:layout_below="@+id/spinner_subject"/>
 
+    <Button
+        android:id="@+id/addNewQuestions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinner_difficulty"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:text="ADD NEW QUESTIONS" />
+
 </RelativeLayout>
